--- a/src/app/rowone/rowone.component.html
+++ b/src/app/rowone/rowone.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 centered">
     <img src="assets/Images/row1.webp" class="img-fluid backgroundimage" alt="">
-    <div class="centered text-white w-100 text-center">
+    <div class="centeredtext text-white w-100 text-center">
         <div class="name">SHREYAS NEEL</div>
         <div class="subtitle w-100">TRAINING WITH THE SOLDIER!</div>
         <div class="d-inline-flex">
