--- a/src/app/rowthird/rowthird.component.html
+++ b/src/app/rowthird/rowthird.component.html
@@ -2,9 +2,9 @@
     <div class="py-3"></div>
 </div>
 
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 centered3">
     <img src="assets/Images/rowthird.webp" class="img-fluid backgroundimage" alt="">
-    <div class="centered3 text-white w-100 text-center">
+    <div class="centered3text text-white w-100 text-center">
         <div class="name3 w-75">MEET THE</div>
         <div class="subtitle3 w-75">COACH</div>
         <div class="paragrah">
