--- a/src/app/rowone/rowone.component.css
+++ b/src/app/rowone/rowone.component.css
@@ -1,10 +1,14 @@
 .centered {
+    position: relative;
+}
+
+.centeredtext {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
+    transform: translate(-50%, -90%);
 }
+
 .name{
     font-size: 4.5rem!important;
     letter-spacing: 0.3em;
