--- a/src/app/rowthird/rowthird.component.css
+++ b/src/app/rowthird/rowthird.component.css
@@ -2,10 +2,14 @@
     background-color: #252128 !important;
 }
 .centered3 {
+     position: relative;
+}
+.centered3text{
+    position: absolute;
     transform: translate(-20%, -110%);
     text-align: center;
     color: white;
-    z-index: 1; 
+    z-index: 1;
 }
 
 .name3 {
