--- a/src/app/rowsecond/rowsecond.component.html
+++ b/src/app/rowsecond/rowsecond.component.html
@@ -8,20 +8,20 @@
             <div class="text-container">
                 <div class="name">BEGINNERS</div>
                 <div class="subtitle my-lg-3">
-                    <img src="assets/Images/secondrowicon.webp" alt="">
+                    <img src="assets/Images/secondrowicon.webp"  alt="">
                 </div>
             </div>
-            <img src="assets/Images/secondrow2.webp" class="img-fluid" alt="">
+            <img src="assets/Images/secondrow2.webp" class="backgroundimage img-fluid" alt="">
         </div>
 
         <div class="col-lg-6 p-lg-0 centered2">
             <div class="text-container">
                 <div class="name">PROFESSIONALS</div>
                 <div class="subtitle my-lg-3">
-                    <img src="assets/Images/secondrowicon.webp" alt="">
+                    <img src="assets/Images/secondrowicon.webp" class="backgroundimage" alt="">
                 </div>
             </div>
-            <img src="assets/Images/secondrow1.webp" class="img-fluid" alt="">
+            <img src="assets/Images/secondrow1.webp" class="backgroundimage img-fluid" alt="">
         </div>
     </div>
 </div>
