--- a/src/app/rowone/rowone.component.css
+++ b/src/app/rowone/rowone.component.css
@@ -1,6 +1,11 @@
 .centered {
     position: relative;
 }
+.backgroundimage{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 .centeredtext {
     position: absolute;
