--- a/src/app/rowsecond/rowsecond.component.css
+++ b/src/app/rowsecond/rowsecond.component.css
@@ -14,6 +14,12 @@
     
 }
 
+.backgroundimage{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .text-container {
     position: absolute;
     top: 50%;
