Route and service page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
 <app-navbar></app-navbar>
-<app-rowone></app-rowone>
-<app-rowsecond></app-rowsecond>
-<app-rowthird></app-rowthird>
-<app-rowfourth></app-rowfourth>
-<app-rowfive></app-rowfive>
-<app-rowsix></app-rowsix>
-<app-rowseven></app-rowseven>
-<app-roweight></app-roweight>
+<router-outlet></router-outlet>
