--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,16 +7,16 @@
       <div class="collapse navbar-collapse mx-lg-5" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-lg-5">
           <li class="nav-item">
-            <a class="nav-link active navbartext" aria-current="page" href="#">HOME</a>
+            <a class="nav-link active navbartext" routerLink="/" aria-current="page" href="#">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navbartext" href="#">ABOUT</a>
+            <a class="nav-link navbartext">ABOUT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link navbartext" href="#">THE STUDIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navbartext" href="#">SERVICE</a>
+            <a class="nav-link navbartext" routerLink="/Service">SERVICE</a>
           </li>
           <li class="nav-item dropdown navbartext">
             <a class="nav-link dropdown-toggle text-white navbartext" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
