--- a/src/app/rowone/rowone.component.html
+++ b/src/app/rowone/rowone.component.html
@@ -14,3 +14,10 @@
     </div>
 
 </div>
+<app-rowsecond></app-rowsecond>
+<app-rowthird></app-rowthird>
+<app-rowfourth></app-rowfourth>
+<app-rowfive></app-rowfive>
+<app-rowsix></app-rowsix>
+<app-rowseven></app-rowseven>
+<app-roweight></app-roweight>
